--- a/_sass/template/components/_component--nav-sidebar.scss
+++ b/_sass/template/components/_component--nav-sidebar.scss
@@ -17,7 +17,7 @@
 		grid-column: 1 / 3;
 		height: 0;
 		margin-bottom: 0 !important;
-		margin-top: auto;
+		margin-top: 8px;
 	}
 
 	hr {
